	               updated on the pc, although that does not change anything.

TODO: provide template-based, interpreted databases much like the
  AppInfo classes now have.
TODO: give the knotes conduit a decent test mode.
TODO: only re-write a local database if it is changed.
TODO: move set-category code from subclasses into PilotRecordBase.

2005-08-16  Jason 'vanRijn' Kasper
* Fixed annoyance in vcalconduit (korganizer calendar/todo conduit) that
  caused it to not clean up duplicates/things that should be deleted from
  the Palm on a copy PC to Handheld sync.
* Fixed some majorly ugly bugs in the addressbook conduit that caused 
  duplicate addressbook records to be generated and not deleted once
  created. 

2005-08-15  Adriaan de Groot
* Added lots of null-pointer checks so that it may become possible to
  run conduits without a device link soon. This would be good for testing.
* Noticed that the factory code needs refactoring into templates.
  Did so, and ported the abbrowser factory to it. Basically, this
  removes a lot of cut-and-paste from the whole thing. Same for the
  timeconduit.

2005-06-05  Adriaan de Groot
* I learned to make Chinese dumplings yesterday. That's a much better use
  of a saturday afternoon than bug hunting, don't you think?
* Put lots of effort into the dox for PilotDateEntry, normalized a lot
  of things, gave things slightly more sensible names. This is work towards
  implementing the DatabaseInterpreter for appointments, so you can treat
  the data on the Pilot as a sequence of (libkcal) Events instead of as
  binary blobs.
* Patch from Dylan G applied that replaces 15s and 16s in the code with a
  defined constant (there already was one, just not used consistently).
  Did some more rationalizing, finally removed the CATEGORY_COUNT define
  which was just a duplicate.

2005-05-27  Adriaan de Groot
* Start of the PIM meeting! Way!
* Committed some critical data-loss fixes yesterday. Too late for the KDE 3.4.1 release.